--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Public::Posts#index</h1>
-<p>Find me in app/views/public/posts/index.html.erb</p>
+<%=render 'public/header' %>
+<ul><% @posts.each do |post| %>
+  <li>
+    <%= link_to post.title, post %>
+    <%= post.created_at %>
+    <%= post.status %>
+  </li>
+  <% end %>
+</ul>
