--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,43 @@
-<h2>Sign up</h2>
+<%=render 'public/header' %>
+<h2>新規会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+　<div class="field">
+    <%= f.label :last_name,"姓"%><br />
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name",placeholder:"令和"  %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :first_name,"名" %><br />
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name",placeholder:"道子"  %>
+  </div>
+  <div class="field">
+    <%= f.label :email,"メールアドレス" %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email",placeholder:"sample@example.com"  %>
+  </div>
+
+
+  <div class="field">
+    <%= f.label :password,"パスワード(6文字以上)"%>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation,"パスワード(確認用)" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "新規登録" %>
   </div>
 <% end %>
 
-<%= render "public/shared/links" %>
+<p>アカウントをお持ちの方はこちらから</p>
+<%= link_to"ログイン",new_customer_session_path %>
+<p>を行ってください</p>
+
