--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -2,10 +2,9 @@
   <header>
       <h2><%=link_to "LOGO",root_path %></h2>
    <% if customer_signed_in? %>
-      <p>検索</p>
-        <%= form_tag(search_path,:method => 'get') do %>
-         <%= text_field_tag :search %>
-         <%= submit_tag 'Search', :name => nil %>
+        <%= form_with url: posts_path, method: :get do |f| %>
+         <%=f.text_field :search, :placeholder => "キーワード検索" %>
+         <%=f.submit'検索する' %>
         <% end %>
       <% if current_customer.email != 'guests@example.com' %>
         <li>
