--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Public::Customers#show</h1>
-<p>Find me in app/views/public/customers/show.html.erb</p>
+<%=render 'public/header' %>
+<h2>マイページ</h2>
+<%=image_tag @customer.get_profile_image(50,50) %>
+<%=@customer.last_name %>
+<%=@customer.first_name %>
+<p>自己紹介:<%=@customer.introduction %></p>
+<%= link_to "編集する",edit_path(@customer.id) %>
+
+<h4>投稿した記事</h4>
+<% @posts.each do |f| %>
+  <%= link_to post_path(f.id) do %>
+    <%=image_tag f.get_image(100,100) %>
+  <% end %>
+   <p>タイトル:<%=f.title %></p>
+   <p>ジャンル:<%=f.genre.name %></p>
+   <p>投稿日:<%= f.created_at.strftime('%Y/%m/%d') %></p>
+   <%= link_to "削除する",destroy_path(@customer.id,f.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
+<% end %>
+
+
