--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,9 +1,23 @@
 <%=render 'public/header' %>
-<ul><% @posts.each do |post| %>
-  <li>
-    <%= link_to post.title, post %>
-    <%= post.created_at %>
-    <%= post.status %>
-  </li>
-  <% end %>
-</ul>
+<h2>投稿一覧</h2>
+<% if params[:search] %>
+  検索結果<%=@posts.count %>件
+<% elsif @posts.count==0 %>
+  検索結果 0件
+<% else %>
+  表示件数<%=@posts.count %>件
+<% end %>
+
+<% @posts.each do |post| %>
+  <%= link_to post_path(post.id) do %>
+    <%=image_tag post.get_image(100,100) %>
+    <% end %>
+    <p>タイトル:<%= post.title %></p>
+    <p>ジャンル:<%=post.genre.name %></p>
+    <p>投稿日:<%= post.created_at.strftime('%Y/%m/%d') %></p>
+
+<% end %>
+
+
+
+
