--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Public::Posts#show</h1>
-<p>Find me in app/views/public/posts/show.html.erb</p>
+<%=render 'public/header' %>
+<h2>投稿詳細</h2>
+<%= link_to show_path do %>
+<%=image_tag @customer.get_profile_image(50,50) %>
+<% end %>
+<%=@customer.last_name %>
+<%=@customer.first_name %>
+<div>
+  <%=image_tag @post.get_image(100,100) %>
+  <p>タイトル:<%=@post.title %></p>
+  <p>ジャンル:<%=@post.genre.name %></p>
+  <p>作り方:<%=@post.article %></p>
+</div>
