--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -8,7 +8,7 @@
         <% end %>
       <% if current_customer.email != 'guests@example.com' %>
         <li>
-          <%= link_to "マイページ", show_path %>
+          <%= link_to "マイページ", customer_path(current_customer.id) %>
         </li>
         <li>
           <%= link_to "投稿する", new_post_path %>
@@ -21,9 +21,7 @@
           <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
         </li>
     <% else %>
-        <li>
-        <%= link_to "投稿一覧",posts_path %>
-        </li>
+
         <li>
           <%= link_to "新規登録",new_customer_registration_path %>
         </li>
