--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Public::Customers#edit</h1>
-<p>Find me in app/views/public/customers/edit.html.erb</p>
+<%=render 'public/header' %>
+<h2>プロフィール編集</h2>
+<%=form_with model: @customer,url:customer_path(@customer.id),method: :patch do |f| %>
+<p>プロフィール画像</p>
+<%=f.file_field:profile_image %>
+<p>姓</p>
+<%=f.text_field:last_name %>
+<p>名</p>
+<%=f.text_field:first_name %>
+<p>自己紹介文</p>
+<%=f.text_area:introduction, size: "40x20" %>
+<%=f.submit "変更を保存する" %>
+<%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '本当に退会しますか？' } %>
+<% end %>
+
