--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,2 +1,14 @@
 <%=render 'admin/header' %>
+<h2>投稿詳細</h2>
+<%= link_to admin_customer_path(@customer.id) do %>
+<%=image_tag @customer.get_profile_image(50,50) %>
+<% end %>
+<%=@customer.last_name %>
+<%=@customer.first_name %>
+<div>
+  <%=image_tag @post.get_image(100,100) %>
+  <p>タイトル:<%=@post.title %></p>
+  <p>ジャンル:<%=@post.genre.name %></p>
+  <p>作り方:<%=@post.article %></p>
+</div>
 
