--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -10,6 +10,6 @@
 <p>自己紹介文</p>
 <%=f.text_area:introduction, size: "40x20" %>
 <%=f.submit "変更を保存する" %>
-<%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '本当に退会しますか？' } %>
+<%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '退会すると、会員登録情報やこれまでの投稿履歴が閲覧できなくなります。本当に退会しますか？' } %>
 <% end %>
 
