--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,6 +1,8 @@
 <%=render 'public/header' %>
 <h2>投稿詳細</h2>
+<%= link_to customer_path(@customer.id) do %>
 <%=image_tag @customer.get_profile_image(50,50) %>
+<% end %>
 <%=@customer.last_name %>
 <%=@customer.first_name %>
 <div>
