--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -7,6 +7,8 @@
 <%=f.text_field:last_name %>
 <p>名</p>
 <%=f.text_field:first_name %>
+<p>メールアドレス</p>
+<%=f.text_field:email %>
 <p>自己紹介文</p>
 <%=f.text_area:introduction, size: "40x20" %>
 <%=f.submit "変更を保存する" %>
