--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -5,7 +5,10 @@
 <%=@customer.last_name %>
 <%=@customer.first_name %>
 <p>自己紹介:<%=@customer.introduction %></p>
+<p>会員ステータス:<%=@status %></p>
+<p>メールアドレス:<%=@customer.email %></p>
 <%= link_to "編集する",edit_admin_customer_path(@customer.id) %>
+
 
 
 <h4>投稿した記事</h4>
@@ -16,7 +19,7 @@
    <p>タイトル:<%=f.title %></p>
    <p>ジャンル:<%=f.genre.name %></p>
    <p>投稿日:<%= f.created_at.strftime('%Y/%m/%d') %></p>
-   <%= link_to "削除する",admin_post_path(@customer.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
+   <%= link_to "削除する",admin_post_path(f.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
 <% end %>
 
 
