--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -6,6 +6,7 @@
 <%=@customer.first_name %>
 <p>自己紹介:<%=@customer.introduction %></p>
 <% if @customer==current_customer %>
+<p>メールアドレス:<%=@customer.email %></p>
 <%= link_to "編集する",edit_customer_path(@customer.id) %>
 <% end %>
 
@@ -17,7 +18,9 @@
    <p>タイトル:<%=f.title %></p>
    <p>ジャンル:<%=f.genre.name %></p>
    <p>投稿日:<%= f.created_at.strftime('%Y/%m/%d') %></p>
+   <% if @customer==current_customer %>
    <%= link_to "削除する",destroy_path(@customer.id,f.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
+   <% end %>
 <% end %>
 
 
