--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -3,7 +3,7 @@
 <h2>レシピの投稿</h2>
 <%=form_with model: @post,url:posts_path do |f| %>
 <p>投稿画像</p>
-<%=f.file_field:image,accept:"image/*" %>
+<%=f.file_field:image,multiple: true,accept:"image/*" %>
 <p>タイトル</p>
 <%=f.text_field:title,placeholder:"料理名など" %>
 <p>ジャンル</p>
