--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -11,3 +11,19 @@
   <p>ジャンル:<%=@post.genre.name %></p>
   <p>作り方:<%=@post.article %></p>
 </div>
+
+<div>
+  <p>コメント件数：<%= @post.comments.count %></p>
+  <% @post.comments.each do |comment| %>
+    <p><%= image_tag comment.customer.get_profile_image(100,100) %></p>
+    <%= comment.customer.name %>
+    <%= comment.created_at.strftime('%Y/%m/%d') %>
+    <%=comment.body %>
+  <% end %>
+</div>
+<div>
+  <%= form_with model: [@post, @comment], url:comments_path do |f| %>
+    <%= f.text_area :body, rows: '5', placeholder: "コメントをここに" %>
+    <%= f.submit "送信する" %>
+  <% end %>
+</div>
