--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -19,6 +19,7 @@
    <p>タイトル:<%=f.title %></p>
    <p>ジャンル:<%=f.genre.name %></p>
    <p>投稿日:<%= f.created_at.strftime('%Y/%m/%d') %></p>
+   <p><%= link_to "#{f.comments.count} コメント", admin_post_path(f.id) %></p>
    <%= link_to "削除する",admin_post_path(f.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
 <% end %>
 
