--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -28,7 +28,8 @@
     <p>タイトル:<%= post.title %></p>
     <p>ジャンル:<%=post.genre.name %></p>
     <p>投稿日:<%= post.created_at.strftime('%Y/%m/%d') %></p>
-  <%end%>
+    <p><%= link_to "#{post.comments.count} コメント", admin_post_path(post.id) %></p>
+  <% end %>
 <% end %>
 
 
