--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -18,10 +18,12 @@
    <p>タイトル:<%=f.title %></p>
    <p>ジャンル:<%=f.genre.name %></p>
    <p>投稿日:<%= f.created_at.strftime('%Y/%m/%d') %></p>
+   <p><%= link_to "#{f.nices.count} いいね", post_path(f.id) %></p>
    <p><%= link_to "#{f.comments.count} コメント", post_path(f.id) %></p>
    <% if @customer==current_customer %>
    <%= link_to "削除する",destroy_path(@customer.id,f.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
    <% end %>
 <% end %>
 
-
+<h4>いいねした記事</h4>
+<!--いいねした記事の一覧＝＞投稿詳細に遷移-->
