--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -12,6 +12,21 @@
   <p>作り方:<%=@post.article %></p>
 </div>
 
+ <% if @post.niced_by?(current_customer) %>
+    <p>
+      <%= link_to  post_nices_path(@post.id), method: :delete do %>
+        ♥<%= @post.nices.count %> いいね
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to  post_nices_path(@post.id), method: :post do %>
+        ♡<%= @post.nices.count %> いいね
+      <% end %>
+    </p>
+  <% end %>
+
+
  <div>
   <p>コメント件数：<%= @post.comments.count %></p>
   <%= form_with model: [@post, @comment], url:post_comments_path(@post.id) do |f| %>
@@ -27,5 +42,9 @@
     <%= comment.customer.first_name %>
     <%= comment.created_at.strftime('%Y/%m/%d') %>
     <%=comment.body %>
+    <% if comment.customer == current_customer %>
+      <%= link_to "削除", post_comment_path(comment.post_id, comment.id), method: :delete %>
+    <% end %>
   <% end %>
 </div>
+
