--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -13,14 +13,16 @@
 
 <h4>投稿した記事</h4>
 <% @posts.each do |f| %>
-  <%= link_to post_path(f.id) do %>
-    <%=image_tag f.get_image(100,100) %>
-  <% end %>
-   <p>タイトル:<%=f.title %></p>
-   <p>ジャンル:<%=f.genre.name %></p>
-   <p>投稿日:<%= f.created_at.strftime('%Y/%m/%d') %></p>
-   <p><%= link_to "#{f.comments.count} コメント", admin_post_path(f.id) %></p>
-   <%= link_to "削除する",admin_post_path(f.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
+   <% if f.images.attached? && f.images.first.present? %>
+      <%= link_to admin_post_path(f.id) do %>
+        <%=image_tag f.get_image(100,100) %>
+      <% end %>
+    <% end %>
+     <p>タイトル:<%=f.title %></p>
+     <p>ジャンル:<%=f.genre.name %></p>
+     <p>投稿日:<%= f.created_at.strftime('%Y/%m/%d') %></p>
+     <p><%= link_to "#{f.comments.count} コメント", admin_post_path(f.id) %></p>
+     <%= link_to "削除する",admin_post_path(f.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
 <% end %>
 
 
