--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,10 +1,28 @@
 <%=render 'public/header' %>
+<%=render 'public/sidebar', genres: @genres %>
+
 <h2><%=@customer.last_name %>
     <%=@customer.first_name %>さんの会員詳細</h2>
+
 <%=image_tag @customer.get_profile_image(50,50) %>
 <%=@customer.last_name %>
 <%=@customer.first_name %>
+
+ <% if current_customer != @customer %>
+  <% if current_customer.following?(@customer) %>
+    <%= link_to "フォロー外す", customer_relationships_path(@customer.id), method: :delete %>
+  <% else %>
+    <%= link_to "フォローする", customer_relationships_path(@customer.id), method: :post %>
+  <% end %>
+<% end %>
+  
+  <%= link_to "フォロー一覧", customer_followings_path(@customer.id) %>
+  <%= link_to "フォロワー一覧",  customer_followers_path(@customer.id) %>
+
 <p>自己紹介:<%=@customer.introduction %></p>
+
+
+  
 <% if @customer==current_customer %>
 <p>メールアドレス:<%=@customer.email %></p>
 <%= link_to "編集する",edit_customer_path(@customer.id) %>
