--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,20 +1,30 @@
 <%=render 'public/header' %>
+<%=render 'public/sidebar', genres: @genres %>
 
-<h2>レシピの投稿</h2>
-<%= form_with model: @post, url: posts_path do |f| %>
-  <% if @post.errors.present? %>
-    <% @post.errors.each do |error| %>
-      <%= error.message %>
+ <% if @post.errors.any? %>
+  <%= @post.errors.count %>件のエラーが発生しました。
+    <ul>
+    <% @post.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
     <% end %>
+    </ul>
   <% end %>
-  <p>投稿画像</p>
-  <%= f.file_field :images, multiple: true, accept: "image/*" %>
-  <p>タイトル</p>
-  <%= f.text_field :title, placeholder: "料理名など" %>
-  <p>ジャンル</p>
-  <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), { include_blank: '選択してください'}, { class: 'form-control' , required: true } %>
-  <p>作り方</p>
-  <%= f.text_area :article, size: "40x20", placeholder: "ここに作り方を記述します" %>
-  <%= f.submit '投稿する' %>
-<% end %>
+
+    <h2>レシピの投稿</h2>
+    <%= form_with model: @post, url: posts_path do |f| %>
+      <% if @post.errors.present? %>
+        <% @post.errors.each do |error| %>
+         <%= error.message %>
+        <% end %>
+      <% end %>
+        <p>投稿画像</p>
+        <%= f.file_field :images, multiple: true, accept: "image/*" %>
+        <p>タイトル</p>
+        <%= f.text_field :title, placeholder: "料理名など" %>
+        <p>ジャンル</p>
+        <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), { include_blank: '選択してください'}, { class: 'form-control' , required: true } %>
+        <p>作り方</p>
+        <%= f.text_area :article, size: "40x20", placeholder: "ここに作り方を記述します" %>
+        <%= f.submit '投稿する' %>
+    <% end %>
 
