--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,5 +1,5 @@
 <%=render 'admin/header' %>
-
+<%=render 'admin/sidebar', genres: @genres %>
 <h2>ジャンル編集</h2>
 <%=form_with model: @genre, url: admin_genre_path do |f| %>
 <h4>ジャンル名</h4>
