--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,6 +1,7 @@
 <%=render'admin/header'%>
-<%=render 'public/sidebar', genres: @genres %>
-<h2>投稿一覧</h2>
+<%=render 'admin/sidebar', genres: @genres %>
+
+<h2>レシピ一覧</h2>
 検索結果 <%= @post_count %>件<br>
 <% @posts.each do |post| %>
 
@@ -16,6 +17,7 @@
     <p>タイトル:<%= post.title %></p>
     <p>ジャンル:<%=post.genre.name %></p>
     <p>投稿日:<%= post.created_at.strftime('%Y/%m/%d') %></p>
+    <p><%= link_to "#{post.nices.count} いいね", admin_post_path(post.id) %></p>
     <p><%= link_to "#{post.comments.count} コメント", admin_post_path(post.id) %></p>
   <% end %>
 <% end %>
