--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -36,13 +36,22 @@
 
   <div>
    <p>コメント件数：<%= @post.comments.count %></p>
-    <% if current_customer.email != 'guests@example.com' %>
-      <%= form_with model: [@post, @comment], url:post_comments_path(@post.id) do |f| %>
-        <%= f.text_area :body, rows: '5', placeholder: "コメントをここに" %>
-        <%= f.submit "送信する" %>
+     <% if @comment.errors.any? %>
+      <%= @comment.errors.count %>件のエラーが発生しました
+      <ul>
+        <% @comment.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+     <% end %>
+
+      <% if current_customer.email != 'guests@example.com' %>
+        <%= form_with model: [@post, @comment], url:post_comments_path(@post.id) do |f| %>
+          <%= f.text_area :body, rows: '5', placeholder: "コメントをここに" %>
+          <%= f.submit "送信する" %>
+        <% end %>
       <% end %>
-    <% end %>
-  </div>
+    </div>
 
 <div>
   <% @post.comments.each do |comment| %>
