--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,8 +1,18 @@
 <%=render 'admin/header' %>
 <%=render 'admin/sidebar', genres: @genres %>
-<h2>ジャンル編集</h2>
-<%=form_with model: @genre, url: admin_genre_path do |f| %>
-<h4>ジャンル名</h4>
- <%=f. text_field:name %>
- <%=f. submit '変更を保存' %>
+
+<% if @genre.errors.any? %>
+    <%= @genre.errors.count %>件のエラーが発生しました
+    <ul>
+      <% @genre.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
  <% end %>
+
+ <h2>ジャンル編集</h2>
+ <%=form_with model: @genre, url: admin_genre_path do |f| %>
+  <h4>ジャンル名</h4>
+   <%=f. text_field:name %>
+   <%=f. submit '変更を保存' %>
+  <% end %>
