--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,12 +1,21 @@
 <%=render 'admin/header' %>
 <%=render 'admin/sidebar',genres: @genres %>
 
-<h2>ジャンル一覧・追加</h2>
-<%=form_with model: @genre, url: admin_genres_path do |f| %>
-<p>ジャンル名</p>
-<%=f.text_field:name %>
-<%=f.submit '新規登録' %>
-<% end %>
+ <% if @genre.errors.any? %>
+    <%= @genre.errors.count %>件のエラーが発生しました
+    <ul>
+      <% @genre.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+ <% end %>
+
+  <h2>ジャンル一覧・追加</h2>
+  <%=form_with model: @genre, url: admin_genres_path do |f| %>
+    <p>ジャンル名</p>
+    <%=f.text_field:name %>
+    <%=f.submit '新規登録' %>
+  <% end %>
 
 <p>登録されたジャンル</p>
 <% @genres.each do |genre| %>
