--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,28 +1,42 @@
 <%=render 'public/header' %>
 <%=render 'public/sidebar', genres: @genres %>
 
-  <h2>レシピの一覧</h2>
-  検索結果 <%= @post_count %>件<br>
-  <% @posts.each do |post| %>
-
-    <% unless post.customer.is_deleted %>
-      <%=image_tag post.customer.get_profile_image(50, 50) %>
-      <%=post.customer.last_name %>
-      <%=post.customer.first_name %>
-       <% if post.images.attached? && post.images.first.present? %>
-        <%= link_to post_path(post.id) do %>
-          <%= image_tag post.get_image(100, 100) %>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h2>レシピの一覧</h2>
+      <p>検索結果 <%= @post_count %>件</p>
+      <div class="row">
+        <% @posts.each do |post| %>
+          <div class="col-4">
+            <div class="card">
+              <% if post.images.attached? && post.images.first.present? %>
+                <%= link_to post_path(post.id) do %>
+                  <%= image_tag post.get_image(100, 100), class: "card-img-top", size: "200x200" %>
+                <% end %>
+              <% end %>
+              <div class="card-body">
+                <h5 class="card-title"><%= post.title %></h5>
+                <%=image_tag post.customer.get_profile_image(50, 50) %>
+                <p class="card-text">
+                  <%=post.customer.last_name %>
+                  <%=post.customer.first_name %>
+                </p>
+                <div class="card-text">
+                  <p>ジャンル:<%=post.genre.name %></p>
+                  <p>投稿日:<%= post.created_at.strftime('%Y/%m/%d') %></p>
+                  <p><%= link_to "#{post.nices.count} いいね", post_path(post.id) %></p>
+                  <p><%= link_to "#{post.comments.count} コメント", post_path(post.id) %></p>
+                </div>
+              </div>
+            </div>
+          </div>
         <% end %>
-      <% end %>
-      <p>タイトル:<%= post.title %></p>
-      <p>ジャンル:<%=post.genre.name %></p>
-      <p>投稿日:<%= post.created_at.strftime('%Y/%m/%d') %></p>
-      <p><%= link_to "#{post.nices.count} いいね", post_path(post.id) %></p>
-      <p><%= link_to "#{post.comments.count} コメント", post_path(post.id) %></p>
-    <% end %>
-  <% end %>
-
-  <%#= paginate @posts %>
+      </div>
+      <%= paginate @posts %>
+    </div>
+  </div>
+</div>
 
 
 
