--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -1,34 +1,115 @@
+
+      <nav class="navbar navbar-light bg-light">
+       <a class="navbar-brand" href="root_path">
+       <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        cooking
+        </a>
+      </nav>
+      <% if customer_signed_in? %>
+        <% if current_customer.email != 'guests@example.com' %>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+         <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+             <a class="nav-link" href="customer_path(current_customer.id)">マイページ</a>
+            </li>
+            <li class="nav-item">
+             <a class="nav-link" href="new_post_path">投稿する</a>
+            </li>
+         <% end %>
+            <li class="nav-item">
+             <a class="nav-link" href="posts_path">レシピ一覧</a>
+            </li>
+            <li class="nav-item">
+             <a class="nav-link" href="destroy_customer_session_path", method: :delete>ログアウト</a>
+            </li>
+      <% else %>
+            <li class="nav-item">
+             <a class="nav-link" href="new_customer_registration_path">新規登録</a>
+            </li>
+            <li class="nav-item">
+             <a class="nav-link" href="new_customer_session_path">ログイン</a>
+            </li>
+           </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+      <% end %>
+
+
 <body>
   <header>
       <h2><%=link_to "LOGO",root_path %></h2>
-   <% if customer_signed_in? %>
-        <%= form_with url: posts_path, method: :get do |f| %>
-         <%=f.text_field :search, :placeholder => "キーワード検索" %>
-         <%=f.submit'検索する' %>
-        <% end %>
-      <% if current_customer.email != 'guests@example.com' %>
-        <li>
-          <%= link_to "マイページ", customer_path(current_customer.id) %>
-        </li>
-        <li>
-          <%= link_to "投稿する", new_post_path %>
-        </li>
-      <% end %>
-        <li>
-        <%= link_to "投稿一覧",posts_path %>
-        </li>
-        <li>
-          <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-        </li>
-    <% else %>
+       <% if customer_signed_in? %>
+            <%= form_with url: posts_path, method: :get do |f| %>
+             <%=f.text_field :search, :placeholder => "キーワード検索" %>
+             <%=f.submit'検索する' %>
+            <% end %>
+          <% if current_customer.email != 'guests@example.com' %>
+            <li>
+              <%= link_to "マイページ", customer_path(current_customer.id) %>
+            </li>
+            <li>
+              <%= link_to "投稿する", new_post_path %>
+            </li>
+          <% end %>
+            <li>
+            <%= link_to "レシピ一覧",posts_path %>
+            </li>
+            <li>
+              <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+            </li>
+        <% else %>
 
-        <li>
-          <%= link_to "新規登録",new_customer_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン",new_customer_session_path %>
-        </li>
-   <% end %>
-  </header>
- <%= yield %>
+            <li>
+              <%= link_to "新規登録",new_customer_registration_path %>
+            </li>
+            <li>
+              <%= link_to "ログイン",new_customer_session_path %>
+            </li>
+       <% end %>
+      </header>
+     <%= yield %>
 </body>
+
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    Bootstrap
+  </a>
+</nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
