--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -1,30 +1,33 @@
-
+<div class="container">
+  <div class="row">
+    <div class="col-12">
       <nav class="navbar navbar-light bg-light">
        <a class="navbar-brand" href="root_path">
        <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
         cooking
         </a>
       </nav>
+  
       <% if customer_signed_in? %>
         <% if current_customer.email != 'guests@example.com' %>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav mr-auto">
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-             <a class="nav-link" href="customer_path(current_customer.id)">マイページ</a>
+              <%= link_to "マイページ", customer_path(current_customer.id) ,class:"nav-link" %>
             </li>
             <li class="nav-item">
-             <a class="nav-link" href="new_post_path">投稿する</a>
+              <%= link_to "投稿する", new_post_path,class:"nav-link" %>
             </li>
          <% end %>
             <li class="nav-item">
-             <a class="nav-link" href="posts_path">レシピ一覧</a>
+              <%= link_to "レシピ一覧",posts_path,,class:"nav-link" %>
             </li>
             <li class="nav-item">
-             <a class="nav-link" href="destroy_customer_session_path", method: :delete>ログアウト</a>
+              <%= link_to "ログアウト", destroy_customer_session_path,class:"nav-link", method: :delete %>
             </li>
       <% else %>
             <li class="nav-item">
-             <a class="nav-link" href="new_customer_registration_path">新規登録</a>
+              <%= link_to "新規登録",new_customer_registration_path,class:"nav-link" %>
             </li>
             <li class="nav-item">
              <a class="nav-link" href="new_customer_session_path">ログイン</a>
@@ -35,7 +38,9 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
       <% end %>
-
+</div>
+</div>
+</div>
 
 <body>
   <header>
