--- a/app/views/admin/_sidebar.html.erb
+++ b/app/views/admin/_sidebar.html.erb
@@ -1,6 +1,48 @@
-<h4>ジャンルから探す</h4>
-<% genres.each do |genre| %>
-  <li>
-    <%= link_to genre.name, admin_posts_path(genre_id: genre.id) %>
-  </li>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <table class="table">
+       <tbody>
+         <tr>
+         <th>ジャンルから探す</th>
+         </tr>
+         <tr>
+           <% genres.each do |genre| %>
+           <td>
+             <%= link_to genre.name, admin_posts_path(genre_id: genre.id), class:"btn btn-outline-secondary btn-block" %>
+             <i class="fas fa-user-cog"></i>
+           </td>
+        </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
+
+
+<!--<div class="container px-5 px-sm-0">-->
+<!--  <div class="row">-->
+<!--    <div class="col-md-3">-->
+<!--      <table class="table">-->
+<!--        <thead>-->
+<!--          <tr>-->
+<!--            <th scope="col"></th>-->
+<!--            <th scope="col">ジャンルから探す</th>-->
+<!--          </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--          <tr>-->
+<!--            <th scope="row">1</th>-->
+<!--            <td>-->
+<!--              <%# genres.each do |genre| %>-->
+<!--              <li>-->
+<!--               <%#= link_to genre.name, admin_posts_path(genre_id: genre.id), class:"btn btn-outline-secondary btn-block" %>-->
+<!--            　 </li>-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--        </tbody>-->
+<!--      </table>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+<!--</div>-->
