--- a/app/views/public/_sidebar.html.erb
+++ b/app/views/public/_sidebar.html.erb
@@ -1,6 +1,20 @@
-<h4>ジャンルから探す</h4>
-<% genres.each do |genre| %>
-  <li>
-    <%= link_to genre.name, posts_path(genre_id: genre.id) %>
-  </li>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <table class="table">
+       <tbody>
+         <tr>
+         <th>ジャンルから探す</th>
+         </tr>
+         <tr>
+           <% genres.each do |genre| %>
+           <td>
+             <%= link_to genre.name, posts_path(genre_id: genre.id), class:"btn btn-outline-secondary btn-block" %>
+             <i class="fas fa-user-cog"></i>
+           </td>
+        </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
