--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -28,3 +28,52 @@
         <%= f.submit '投稿する' %>
     <% end %>
 
+
+<h2>レシピの投稿</h2>
+        <% if @post.errors.any? %>
+          <%= @post.errors.count %>件のエラーが発生しました。
+             <ul>
+             <% @post.errors.full_messages.each do |message| %>
+             <li><%= message %></li>
+           <% end %>
+          </ul>
+        <% end %>
+
+        <%= form_with model: @post, url: posts_path do |f| %>
+          <% if @post.errors.present? %>
+            <% @post.errors.each do |error| %>
+            <%= error.message %>
+          <% end %>
+        <% end %>
+        <% end %>
+        <br>
+        <div class="row">
+            <div class="col-md-4">
+                <form>
+                  <%= form_with model: @post, url: posts_path do |f| %>
+                    <div class="form-group">
+                        <p>投稿画像</p>
+                        <%= f.file_field :images, multiple: true, accept: "image/*",class:"form-control" %>
+                    </div>
+                    <div class="form-group">
+                        <p>タイトル</p>
+                        <%= f.text_field :title, placeholder: "料理名など",class:"form-control" %>
+                    </div>
+                    <div class="form-group">
+                        <p>ジャンル</p>
+                        <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), { include_blank: '選択してください'}, { class: 'form-control' , required: true } %>
+                    </div>
+                    <div class="form-group">
+                        <p>作り方</p>
+                        <%= f.text_area :article, size: "40x20", placeholder: "ここに作り方を記述します",class:"form-control" %>
+                    </div>
+                </form>
+            </div>
+        </div>
+            <div class="row center-block text-center">
+                <div class="col-4">
+                    <%= f.submit "投稿する",class:"btn btn-outline-primary btn-block" %>
+                </div>
+                <% end %>
+            </div>
+
