--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,5 +1,10 @@
-<%=render 'public/header' %>
-<%=render 'public/sidebar', genres: @genres %>
+<div class="container" >
+  <div class="row">
+    <div class="col-12">
+    <%=render 'public/header' %>
+    </div>
+  </div>
+
 
   <% if @customer.errors.any? %>
     <%= @customer.errors.count %>件のエラーが発生しました
@@ -25,52 +30,59 @@
       <%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '退会すると、会員登録情報やこれまでの投稿履歴が閲覧できなくなります。本当に退会しますか？' } %>
     <% end %>
 
+<div class="row">
+      <div class="col-9">
+        <h2>プロフィール編集</h2>
+             <% if @customer.errors.any? %>
+               <%= @customer.errors.count %>件のエラーが発生しました
+               <ul>
+                 <% @customer.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                 <% end %>
+               </ul>
+                <% end %>
+                <br>
+                <div class="row">
+                    <div class="col-8">
+                        <form>
+                          <%=form_with model: @customer,url:customer_path(@customer.id),method: :patch do |f| %>
+                            <div class="form-group">
+                                <p>プロフィール画像</p>
+                                <%=f.file_field:profile_image %>
+                            </div>
+                            <div class="form-group">
+                                <p>姓</p>
+                                <%=f.text_field:last_name,class:"form-control" %>
+                            </div>
+                            <div class="form-group">
+                                <p>名</p>
+                                <%=f.text_field:first_name,class:"form-control" %>
+                            </div>
+                            <div class="form-group">
+                                <p>メールアドレス</p>
+                                <%=f.text_field:email,class:"form-control" %>
+                            </div>
+                            <div class="form-group">
+                                <p>自己紹介文</p>
+                                <%=f.text_area:introduction, size: "40x20",class:"form-control" %>
+                            </div
+                        </form>
+                    </div>
+                </div>
 
-<h2>プロフィール編集</h2>
-        <% if @customer.errors.any? %>
-           <%= @customer.errors.count %>件のエラーが発生しました
-           <ul>
-            <% @customer.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-            <% end %>
-           </ul>
-        <% end %>
-        <br>
-        <div class="row">
-            <div class="col-md-4">
-                <form>
-                  <%=form_with model: @customer,url:customer_path(@customer.id),method: :patch do |f| %>
-                    <div class="form-group">
-                        <p>プロフィール画像</p>
-                        <%=f.file_field:profile_image %>
+                <div class="row center-block text-center">
+                    <div class="col-4">
+                        <%= f.submit "変更を保存する",class:"btn btn-outline-primary btn-block" %>
                     </div>
-                    <div class="form-group">
-                        <p>姓</p>
-                        <%=f.text_field:last_name,class:"form-control" %>
-                    </div>
-                    <div class="form-group">
-                        <p>名</p>
-                        <%=f.text_field:first_name,class:"form-control" %>
-                    </div>
-                    <div class="form-group">
-                        <p>メールアドレス</p>
-                        <%=f.text_field:email,class:"form-control" %>
-                    </div>
-                    <div class="form-group">
-                        <p>自己紹介文</p>
-                        <%=f.text_area:introduction, size: "40x20",class:"form-control" %>
-                    </div>
-                </form>
-            </div>
-        </div>
+                    <% end %>
+                </div>
+                <br>
+                <%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '退会すると、会員登録情報やこれまでの投稿履歴が閲覧できなくなります。本当に退会しますか？' },class:"btn btn-outline-primary" %>
+           </div>
+          <div class="col-3">
+           <%=render 'public/sidebar', genres: @genres %>
+          </div>
+       </div>
 
-        <div class="row center-block text-center">
-            <div class="col-4">
-                <%= f.submit "変更を保存する",class:"btn btn-outline-primary btn-block" %>
-            </div>
-            <% end %>
-        </div>
-        <br>
-        <%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '退会すると、会員登録情報やこれまでの投稿履歴が閲覧できなくなります。本当に退会しますか？' },class:"btn btn-outline-primary" %>
-   </div>
+</div>
 
