--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,88 +1,51 @@
-<%=render 'public/header' %>
-<h2>新規会員登録</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-　<div class="field">
-    <%= f.label :last_name,"姓"%><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name",placeholder:"令和"  %>
+<div class="container" >
+  <div class="row">
+      <div class="col-md-12">
+      <%=render 'public/header' %>
+      </div>
   </div>
 
-  <div class="field">
-    <%= f.label :first_name,"名" %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name",placeholder:"道子"  %>
-  </div>
-  <div class="field">
-    <%= f.label :email,"メールアドレス" %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email",placeholder:"sample@example.com"  %>
-  </div>
+  <div class="row">
+    <div class="col-5">
+      <h2>新規会員登録</h2>
+            <br>
 
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <%= render "public/shared/error_messages", resource: resource %>
+              <div class="form-group">
+                  <%= f.label :last_name,"姓"%><br />
+                  <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name",placeholder:"令和",class:"form-control"  %>
+              </div>
+              <div class="form-group">
+                  <%= f.label :first_name,"名" %><br />
+                  <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name",placeholder:"道子",class:"form-control"  %>
+              </div>
+              <div class="form-group">
+                  <%= f.label :email,"メールアドレス" %><br />
+                  <%= f.email_field :email, autofocus: true, autocomplete: "email",placeholder:"sample@example.com",class:"form-control"  %>
+              </div>
+              <div class="form-group">
+                  <%= f.label :password,"パスワード(6文字以上)"%>
+                    <% if @minimum_password_length %>
+                    <% end %><br />
+                  <%= f.password_field :password, autocomplete: "new-password",class:"form-control" %>
+              </div>
+              <div class="form-group">
+                  <%= f.label :password_confirmation,"パスワード(確認用)" %><br />
+                  <%= f.password_field :password_confirmation, autocomplete: "new-password",class:"form-control"  %>
+              </div>
 
-  <div class="field">
-    <%= f.label :password,"パスワード(6文字以上)"%>
-    <% if @minimum_password_length %>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation,"パスワード(確認用)" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-
-  <div class="actions">
-    <%= f.submit "新規登録" %>
-  </div>
-<% end %>
-
-<p>アカウントをお持ちの方はこちらから</p>
-<%= link_to"ログイン",new_customer_session_path %>
-<p>を行ってください</p>
-
-
-<h2>新規会員登録</h2>
-        <br>
-        <div class="row">
-            <div class="col-4">
-                <form>
-                  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-                    <%= render "public/shared/error_messages", resource: resource %>
-                    <div class="form-group">
-                        <%= f.label :last_name,"姓"%><br />
-                        <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name",placeholder:"令和",class:"form-control"  %>
-                    </div>
-                    <div class="form-group">
-                        <%= f.label :first_name,"名" %><br />
-                        <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name",placeholder:"道子",class:"form-control"  %>
-                    </div>
-                    <div class="form-group">
-                        <%= f.label :email,"メールアドレス" %><br />
-                        <%= f.email_field :email, autofocus: true, autocomplete: "email",placeholder:"sample@example.com",class:"form-control"  %>
-                    </div>
-                    <div class="form-group">
-                        <%= f.label :password,"パスワード(6文字以上)"%>
-                          <% if @minimum_password_length %>
-                          <% end %><br />
-                        <%= f.password_field :password, autocomplete: "new-password",class:"form-control" %>
-                    </div>
-                    <div class="form-group">
-                        <%= f.label :password_confirmation,"パスワード(確認用)" %><br />
-                        <%= f.password_field :password_confirmation, autocomplete: "new-password",class:"form-control"  %>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="row center-block text-center">
-            <div class="col-4">
+               <div>
                 <%= f.submit "新規登録",class:"btn btn-outline-primary btn-block" %>
-            </div>
+               </div>
             <% end %>
+
+            <br>
+            <p>アカウントをお持ちの方はこちらから
+            <%= link_to"ログイン",new_customer_session_path %>
+            を行ってください
+            </p>
         </div>
-        <br>
-        <p>アカウントをお持ちの方はこちらから
-        <%= link_to"ログイン",new_customer_session_path %>
-        を行ってください
-        </p>
     </div>
+  </div>
+</div>
