--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,9 @@
-<%=render 'public/header' %>
+<div class="container" >
+  <div class="row">
+    <div class="col-md-12">
+    <%=render 'public/header' %>
+    </div>
+  </div>
+
 <h2>LOGO</h2>
 
