--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -2,8 +2,8 @@
  <header>
      <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-    cooking
+    <%= image_tag "facebook_profile_image.png",class:"d-inline-block align-top main-logo"%>
+  <span class="logo-title">cooking</span>
   </a>
     </nav>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
