--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,66 +1,84 @@
-<%=render 'public/header' %>
-<%=render 'public/sidebar', genres: @genres %>
+<div class="container" >
+    <div class="row">
+      <div class="col-12">
+      <%=render 'public/header' %>
+      </div>
+    </div>
 
- <h2>
-  <%=@customer.last_name %>
-    <%=@customer.first_name %>さんの会員詳細
- </h2>
+  <div class="row">
+    <div class="col-9">
+       <h2>
+        <%=@customer.last_name %>
+          <%=@customer.first_name %>さんの会員詳細
+       </h2>
 
-    <%=image_tag @customer.get_profile_image(50,50) %>
-    <%=@customer.last_name %>
-    <%=@customer.first_name %>
+          <%=image_tag @customer.get_profile_image(100,100),class:"img-thumbnail" %>
+          <%=@customer.last_name %>
+          <%=@customer.first_name %>
 
-  <% if current_customer.email != 'guests@example.com' %>
-   <% if current_customer != @customer %>
-    <% if current_customer.following?(@customer) %>
-      <%= link_to "フォロー外す", customer_relationships_path(@customer.id), method: :delete %>
-    <% else %>
-      <%= link_to "フォローする", customer_relationships_path(@customer.id), method: :post %>
-    <% end %>
-  <% end %>
+        <% if current_customer.email != 'guests@example.com' %>
+         <% if current_customer != @customer %>
+          <% if current_customer.following?(@customer) %>
+            <%= link_to "フォロー外す", customer_relationships_path(@customer.id), method: :delete,class:"btn btn-outline-primary" %>
+          <% else %>
+            <%= link_to "フォローする", customer_relationships_path(@customer.id), method: :post,class:"btn btn-outline-primary" %>
+          <% end %>
+        <% end %>
 
-    <%= link_to "フォロー一覧", customer_followings_path(@customer.id) %>
-    <%= link_to "フォロワー一覧",  customer_followers_path(@customer.id) %>
-  <% end %>
-<p>自己紹介:<%=@customer.introduction %></p>
+          <%= link_to "フォロー一覧", customer_followings_path(@customer.id),class:"btn btn-outline-primary" %>
+          <%= link_to "フォロワー一覧",  customer_followers_path(@customer.id),class:"btn btn-outline-primary" %>
+        <% end %>
+      <p>自己紹介:<%=@customer.introduction %></p>
 
 
 
-<% if @customer==current_customer %>
-<p>メールアドレス:<%=@customer.email %></p>
-<%= link_to "編集する",edit_customer_path(@customer.id) %>
-<% end %>
-
-  <h4>投稿したレシピ</h4>
-  <% @posts.each do |f| %>
-    <% if f.images.attached? && f.images.first.present? %>
-      <%= link_to post_path(f.id) do %>
-        <%=image_tag f.get_image(100,100) %>
+      <% if @customer==current_customer %>
+      <p>メールアドレス:<%=@customer.email %></p>
+      <%= link_to "編集する",edit_customer_path(@customer.id) %>
       <% end %>
-    <% end %>
-     <p>タイトル:<%=f.title %></p>
-     <p>ジャンル:<%=f.genre.name %></p>
-     <p>投稿日:<%= f.created_at.strftime('%Y/%m/%d') %></p>
+        <ul class="nav nav-tabs nav-fill">
+          <li class="nav-item">
+            <%= link_to "投稿したレシピ",customer_path(@customer) ,class:"nav-link #{@nice.present? ? '' : 'active'}" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "いいねしたレシピ",customer_path(@customer,nice: true) ,class:"nav-link #{@nice.present? ? 'active' : ''}" %>
+          </li>
+        </ul>
 
-     <p><%= link_to "#{f.nices.count} いいね", post_path(f.id) %></p>
-     <p><%= link_to "#{f.comments.count} コメント", post_path(f.id) %></p>
+          <div class="row">
+            <div class="col-12">
+              <div class="row">
+                <% @posts.each do |f| %>
+                <div class="col-4">
+                  <div class="card">
+                    <% if f.images.attached? && f.images.first.present? %>
+                      <%= link_to post_path(f.id) do %>
+                        <%=image_tag f.get_image(300,300), class: "card-img-top", size: "150x150"%>
+                      <% end %>
+                    <% end %>
+                    <div class="card-body">
+                     <h5 class="card-title"><%=f.title %></h5>
+                     <div class="card-text">
+                       <p><%= f.created_at.strftime('%Y/%m/%d') %></p>
+                       <p><%= link_to "#{f.nices.count} いいね", post_path(f.id) %></p>
+                       <p><%= link_to "#{f.comments.count} コメント", post_path(f.id) %></p>
+                       <% if @customer==current_customer %>
+                       <%= link_to "削除する",destroy_path(@customer.id,f.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
+                       <% end %>
+                     </div>
+                    </div>
+                  </div>
+                </div>
+                  <% end %>
+              </div>
 
-     <% if @customer==current_customer %>
-     <%= link_to "削除する",destroy_path(@customer.id,f.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
-     <% end %>
-  <% end %>
+            </div>
+          </div>
+   </div>
+    <div class="col-3">
+     <%=render 'public/sidebar', genres: @genres %>
+   </div>
+</div>
 
-<h4>いいねしたレシピ</h4>
-<% @customer.niced_posts.each do |post| %>
-  <% if post.images.attached? && post.images.first.present? %>
-    <%= link_to post_path(post) do %>
-      <%= image_tag post.get_image(100, 100) %>
-    <% end %>
-  <% end %>
-    <p>タイトル:<%= post.title %></p>
-    <p>ジャンル:<%= post.genre.name %></p>
-    <p>投稿日:<%= post.created_at.strftime('%Y/%m/%d') %></p>
-    <p><%= link_to "#{post.nices.count} いいね", post_path(post) %></p>
-    <p><%= link_to "#{post.comments.count} コメント", post_path(post) %></p>
-<% end %>
+
 
