--- a/app/views/public/_header.html.erb
+++ b/app/views/public/_header.html.erb
@@ -1,10 +1,10 @@
 
  <header>
      <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <%= image_tag "facebook_profile_image.png",class:"d-inline-block align-top main-logo"%>
-  <span class="logo-title">cooking</span>
-  </a>
+     <a class="navbar-brand" href="#">
+      <%= image_tag "logo.jpg",class:"d-inline-block align-top main-logo"%>
+    <span class="logo-title">cooking</span>
+    </a>
     </nav>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
