--- a/app/views/public/relationships/followings.html.erb
+++ b/app/views/public/relationships/followings.html.erb
@@ -1,3 +1,15 @@
-<%=render 'public/header' %>
-<%=render 'public/sidebar', genres: @genres %>
-<%=render 'public/relationships/follow',customers: @customers %>
+<div class="container" >
+  <div class="row">
+    <div class="col-md-12">
+    <%=render 'public/header' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-9">
+      <h2>フォロー</h2>
+      <%=render 'public/relationships/follow',customers: @customers %>
+    </div>
+    <div class="col-3">
+      <%=render 'public/sidebar', genres: @genres %>
+   </div>
+  </div>
