--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -11,7 +11,6 @@
         <%=@customer.last_name %>
           <%=@customer.first_name %>さんの会員詳細
        </h2>
-
           <%=image_tag @customer.get_profile_image(100,100),class:"img-thumbnail" %>
           <%=@customer.last_name %>
           <%=@customer.first_name %>
@@ -34,7 +33,7 @@
 
       <% if @customer==current_customer %>
       <p>メールアドレス:<%=@customer.email %></p>
-      <%= link_to "編集する",edit_customer_path(@customer.id) %>
+      <%= link_to "編集する",edit_customer_path(@customer.id),class:"btn btn-outline-primary" %>
       <% end %>
         <ul class="nav nav-tabs nav-fill">
           <li class="nav-item">
