--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,68 +1,83 @@
-<%=render 'public/header' %>
-<%=render 'public/sidebar', genres: @genres %>
-
-<h2>レシピの詳細</h2>
-<%= link_to customer_path(@customer.id) do %>
-<%=image_tag @customer.get_profile_image(50,50) %>
-<% end %>
-<%=@customer.last_name %>
-<%=@customer.first_name %>
-<div>
-  <% if @post.images.attached? %>
-    <% @post.images.each do |image| %>
-      <%= image_tag image.variant(resize_to_limit: [100, 100]).processed %>
-    <% end %>
-  <% end %>
-  <p>タイトル:<%=@post.title %></p>
-  <p>ジャンル:<%=@post.genre.name %></p>
-  <p>作り方:<%=@post.article %></p>
-</div>
-
-  <% if current_customer.email != 'guests@example.com' %>
-   <% if @post.niced_by?(current_customer) %>
-      <p>
-        <%= link_to  post_nices_path(@post.id), method: :delete do %>
-          ♥<%= @post.nices.count %> いいね
-        <% end %>
-      </p>
-      <% else %>
-      <p>
-        <%= link_to  post_nices_path(@post.id), method: :post do %>
-          ♡<%= @post.nices.count %> いいね
-        <% end %>
-      </p>
-    <% end %>
-  <% end %>
-
-  <div>
-   <p>コメント件数：<%= @post.comments.count %></p>
-     <% if @comment.errors.any? %>
-      <%= @comment.errors.count %>件のエラーが発生しました
-      <ul>
-        <% @comment.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-     <% end %>
-
-      <% if current_customer.email != 'guests@example.com' %>
-        <%= form_with model: [@post, @comment], url:post_comments_path(@post.id) do |f| %>
-          <%= f.text_area :body, rows: '5', placeholder: "コメントをここに" %>
-          <%= f.submit "送信する" %>
-        <% end %>
-      <% end %>
+<div class="container" >
+  <div class="row">
+    <div class="col-md-12">
+    <%=render 'public/header' %>
     </div>
+  </div>
+<%#=render 'public/sidebar', genres: @genres %>
+    <div class="row">
+      <div class="col-9">
+        <h2>レシピの詳細</h2>
+        <div class="row">
+          <div class="col-4">
+            <% if @post.images.attached? %>
+                <% @post.images.each do |image| %>
+                  <%= image_tag image.variant(resize_to_limit: [100, 100]).processed,class:"img img-responsive full-width" %>
+                <% end %>
+            <% end %>
+          </div>
+        </div>
+          <%= link_to customer_path(@customer.id) do %>
+          <%=image_tag @customer.get_profile_image(50,50) %>
+          <% end %>
+          <%=@customer.last_name %>
+          <%=@customer.first_name %>
+        <div>
+          <p>タイトル:<%=@post.title %></p>
+          <p>ジャンル:<%=@post.genre.name %></p>
+          <p>作り方:<%=@post.article %></p>
+        </div>
 
-<div>
-  <% @post.comments.each do |comment| %>
-    <p><%= image_tag comment.customer.get_profile_image(30,30) %></p>
-    <%= comment.customer.last_name %>
-    <%= comment.customer.first_name %>
-    <%= comment.created_at.strftime('%Y/%m/%d') %>
-    <%=comment.body %>
-    <% if comment.customer == current_customer %>
-      <%= link_to "削除", post_comment_path(comment.post_id, comment.id), method: :delete %>
-    <% end %>
-  <% end %>
+          <% if current_customer.email != 'guests@example.com' %>
+           <% if @post.niced_by?(current_customer) %>
+              <p>
+                <%= link_to  post_nices_path(@post.id), method: :delete do %>
+                  ♥<%= @post.nices.count %> いいね
+                <% end %>
+              </p>
+              <% else %>
+              <p>
+                <%= link_to  post_nices_path(@post.id), method: :post do %>
+                  ♡<%= @post.nices.count %> いいね
+                <% end %>
+              </p>
+            <% end %>
+          <% end %>
+
+          <div>
+           <p>コメント件数：<%= @post.comments.count %></p>
+             <% if @comment.errors.any? %>
+              <%= @comment.errors.count %>件のエラーが発生しました
+              <ul>
+                <% @comment.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+             <% end %>
+
+              <% if current_customer.email != 'guests@example.com' %>
+                <%= form_with model: [@post, @comment], url:post_comments_path(@post.id) do |f| %>
+                  <%= f.text_area :body, rows: '5', placeholder: "コメントをここに" %>
+                  <%= f.submit "送信する" %>
+                <% end %>
+              <% end %>
+            </div>
+
+        <div>
+          <% @post.comments.each do |comment| %>
+            <p><%= image_tag comment.customer.get_profile_image(30,30) %></p>
+            <%= comment.customer.last_name %>
+            <%= comment.customer.first_name %>
+            <%= comment.created_at.strftime('%Y/%m/%d') %>
+            <%=comment.body %>
+            <% if comment.customer == current_customer %>
+              <%= link_to "削除", post_comment_path(comment.post_id, comment.id), method: :delete %>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+       <div class="col-3">
+       <%=render 'public/sidebar', genres: @genres %>
+       </div>
+    </div>
 </div>
-
