--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -4,7 +4,14 @@
     <%=render 'public/header' %>
     </div>
   </div>
-  <div class="col-3">
+  <div class="row">
+    <div class="col-9">
+      <h2>フォロワー</h2>
+      <%=render 'public/relationships/follow',customers: @customers %>
+    </div>
+    <div class="col-3">
       <%=render 'public/sidebar', genres: @genres %>
    </div>
-<%=render 'public/relationships/follow',customers: @customers %>
+  </div>
+
+
